<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/droid_desserts"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textintro"
        android:padding="10dp"
        android:text="@string/choose_a_dessert" />

    <!-- Lista de imágenes y texto -->
    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_dessert"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Primer elemento -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_donut"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/donut_image"
                android:onClick="showDonutOrder"
                android:src="@drawable/donut_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donutDescription"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Segundo elemento -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_icecream"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ice_cream_image"
                android:onClick="showIceCreamOrder"
                android:src="@drawable/icecream_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IceCreamDescription"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Tercer elemento -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_froyo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/frozen_yogurt_image"
                android:onClick="showFroyoOrder"
                android:src="@drawable/froyo_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/froyoDescription"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Botón flotante -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="Email Button"
        app:srcCompat="@drawable/donut_circle" />
</RelativeLayout>